--- a/index.html
+++ b/index.html
@@ -15,8 +15,34 @@
     ></script>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ "
+      href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"
     />
   </head>
-  <body></body>
+  <body>
+    <ion-app>
+      <ion-header>
+        <ion-toolbar color="tertiary">
+          <ion-title>Budget Planner</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>New Expense</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-item>
+              <ion-label position="floating">Expense Reason</ion-label>
+              <ion-input type="text" placeholder="Enter text"></ion-input>
+            </ion-item>
+
+            <ion-item>
+              <ion-label position="floating">Expense Amount</ion-label>
+              <ion-input type="number" placeholder="Enter text"></ion-input>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+      </ion-content>
+    </ion-app>
+  </body>
 </html>
