Using ion-grid template

--- a/index.html
+++ b/index.html
@@ -26,22 +26,32 @@
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>New Expense</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-item>
-              <ion-label position="floating">Expense Reason</ion-label>
-              <ion-input type="text" placeholder="Enter text"></ion-input>
-            </ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col size-md="6" offset-md="3">
+              <ion-card>
+                <ion-card-header>
+                  <ion-card-title>New Expense</ion-card-title>
+                </ion-card-header>
 
-            <ion-item>
-              <ion-label position="floating">Expense Amount</ion-label>
-              <ion-input type="number" placeholder="Enter text"></ion-input>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
+                <ion-card-content>
+                  <ion-item>
+                    <ion-label position="floating">Expense Reason</ion-label>
+                    <ion-input type="text" placeholder="Enter text"></ion-input>
+                  </ion-item>
+
+                  <ion-item>
+                    <ion-label position="floating">Expense Amount</ion-label>
+                    <ion-input
+                      type="number"
+                      placeholder="Enter text"
+                    ></ion-input>
+                  </ion-item>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-content>
     </ion-app>
   </body>
