--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                       placeholder="Enter text"
                     ></ion-input>
                   </ion-item>
+
+                  <ion-button fill="outline" color="danger">
+                    <ion-icon name="close" slot="start"></ion-icon>
+                    Clear</ion-button
+                  >
+                  <ion-button>
+                    <ion-icon name="add" slot="start"></ion-icon>
+                    Add expense</ion-button
+                  >
                 </ion-card-content>
               </ion-card>
             </ion-col>
