--- a/index.html
+++ b/index.html
@@ -37,25 +37,24 @@
                 <ion-card-content>
                   <ion-item>
                     <ion-label position="floating">Expense Reason</ion-label>
-                    <ion-input type="text" placeholder="Enter text"></ion-input>
+                    <ion-input type="text" id="input-reason"></ion-input>
                   </ion-item>
 
                   <ion-item>
                     <ion-label position="floating">Expense Amount</ion-label>
-                    <ion-input
-                      type="number"
-                      placeholder="Enter text"
-                    ></ion-input>
+                    <ion-input type="number" id="input-amount"></ion-input>
                   </ion-item>
 
-                  <ion-button fill="outline" color="danger">
-                    <ion-icon name="close" slot="start"></ion-icon>
-                    Clear</ion-button
-                  >
-                  <ion-button>
-                    <ion-icon name="add" slot="start"></ion-icon>
-                    Add expense</ion-button
-                  >
+                  <div class="ion-margin-vertical ion-text-right">
+                    <ion-button fill="outline" color="danger" id="btn-cancel">
+                      <ion-icon name="close" slot="start"></ion-icon>
+                      Clear</ion-button
+                    >
+                    <ion-button id="btn-confirm">
+                      <ion-icon name="add" slot="start"></ion-icon>
+                      Add expense</ion-button
+                    >
+                  </div>
                 </ion-card-content>
               </ion-card>
             </ion-col>
@@ -63,5 +62,6 @@
         </ion-grid>
       </ion-content>
     </ion-app>
+    <script src="./app.js"></script>
   </body>
 </html>
