Added total expenses feature

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
               <ion-list id="expense-list"></ion-list>
             </ion-col>
           </ion-row>
+
+          <ion-row>
+            <ion-col>
+              <p>Total expense: ₹<span id="total-expenses"></span></p>
+            </ion-col>
+          </ion-row>
         </ion-grid>
       </ion-content>
     </ion-app>
