Finalizing the project

--- a/index.html
+++ b/index.html
@@ -61,14 +61,16 @@
           </ion-row>
 
           <ion-row>
-            <ion-col>
+            <ion-col size-md="6" offset-md="3">
               <ion-list id="expense-list"></ion-list>
             </ion-col>
           </ion-row>
 
           <ion-row>
-            <ion-col>
-              <p>Total expense: ₹<span id="total-expenses"></span></p>
+            <ion-col size-md="6" offset-md="3">
+              <p class="ion-margin">
+                Total expense: ₹<span id="total-expenses"></span>
+              </p>
             </ion-col>
           </ion-row>
         </ion-grid>
