--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
           </ion-row>
         </ion-grid>
       </ion-content>
+
+      <ion-alert-controller></ion-alert-controller>
     </ion-app>
     <script src="./app.js"></script>
   </body>
